resources/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: codedesignplus-gateway
  namespace: istio-system
  labels:
    app: codedesignplus-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "codedesignplus-dev.com"
